1. Метод .of [#367697]